<resources>
    <string name="app_name">RoTieba</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">动态</string>
    <string name="title_settings">设置</string>
    <string name="account_label">账户</string>
    <string name="anonymous">匿名</string>
    <string name="anonymous_tips">点击右上角新增账号</string>
    <string name="title_add">添加</string>
    <string name="delete_title">删除</string>
    <string name="search_title">搜索</string>
    <string name="searchbar_hint">输入关键词、ID或地址</string>
    <string name="searchbar_search_at_forum_hint">在%s吧搜索</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh_title">刷新</string>
    <string name="copy_title">复制帖子内容</string>
    <string name="link_title">复制帖子链接</string>
    <string name="open_link_title">打开所选链接</string>
    <string name="copy_link_title">复制所选链接</string>
    <string name="download_photo_title">下载图片</string>
    <string name="saved_to_gallery">已保存到相册</string>
    <string name="error_dialog_title">错误</string>
    <string name="search_tab_bar_title">吧</string>
    <string name="no_result_tips">未搜索到内容</string>
    <string name="share_photo_title">分享图片</string>
    <string name="back_title">返回</string>
    <string name="bawu_type_manager_name">吧主</string>
    <string name="bawu_type_assist_name">小吧主</string>
    <string name="detail_title">详细信息</string>
    <string name="search_tab_post_title">贴</string>
    <string name="load_previous_title">加载全部内容</string>
    <string name="filter_all_title">全部</string>
    <string name="filter_thread_title">只看主题帖</string>
    <string name="search_post_order_old">从旧到新</string>
    <string name="search_post_order_new">从新到旧</string>
    <string name="search_post_order_relevant">相关性</string>
    <string name="empty">没有内容</string>
    <string name="open_at_other_client_title">在其他客户端打开</string>
    <string name="download_video_title">下载视频</string>
    <string name="open_video_title">在浏览器打开视频</string>
    <string name="copy_video_link_title">复制视频地址</string>
    <string name="no_other_apps_tips">没有可以处理贴吧链接的其他应用</string>
    <string name="sort_title">倒序</string>
    <string name="see_lz_title">只看楼主</string>
    <string name="jump_page_title">跳页</string>
    <string name="jump_page_hint">页数</string>
    <string name="ok">确定</string>
    <string name="user_follow_forums_hidden">该用户已隐藏关注的吧</string>
    <string name="user_follow_forums_empty">该用户还没有关注的吧</string>
    <string name="user_thread_empty">该用户未发过帖子或已隐藏</string>
    <string name="sort_by_reply_time">回复时间</string>
    <string name="sort_by_create_time">创建时间</string>
    <string name="search_tab_user_title">用户</string>
    <string name="copy_uid_title">复制 UID</string>
    <string name="copy_portrait_title">复制 portrait</string>
    <string name="copy_image_url_title">复制图片地址</string>
    <string name="user_replies_hidden">该用户已隐藏回帖</string>
    <string name="user_replies_empty">该用户还没有回帖</string>
    <string name="show_origin_title">查看原帖</string>
    <string name="auto_link_title">自动转换文本链接</string>
    <string name="auto_bv_title">自动识别 av / BV 号</string>
    <string name="account_manage_title">账户管理</string>
    <string name="remove_all_title">全部删除</string>
    <string name="history">历史记录</string>
    <string name="configure_default_open_title">配置默认打开</string>
    <string name="configure_default_open_detail"><![CDATA[
        在设置中允许 RoTieba 打开百度贴吧的 http 链接。
        <br/>
        如果您的系统不支持设置（如 MIUI），您可以在 ADB 终端输入以下命令
        <br/>
        <font face="monospace">pm set-app-links-user-selection --package %s --user 0 true tieba.baidu.com</font>]]>
    </string>
    <string name="version">当前版本</string>
    <string name="no_history">还没有历史记录</string>
    <string name="login_tips_text">登录后可查看关注的吧</string>
    <string name="login">登录</string>
    <string name="open_forum_title">打开所在贴吧</string>
    <string name="login_with_cookies">使用 cookies 登录</string>
    <string name="login_with_webview">网页登录</string>
    <string name="username">用户名</string>
    <string name="bduss_title">BDUSS（必填）</string>
    <string name="edit_account_title">编辑账户信息</string>
    <string name="input_to_search_box">输入到搜索框</string>
    <string name="open_my_profile">打开我的个人资料</string>
    <string name="open_profile">打开个人资料</string>
    <string name="copy_thread_link">复制帖子链接</string>
</resources>