<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh_title"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:title="@string/sort_title"
        android:icon="@drawable/ic_sort"
        android:checkable="true"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never" />
    <item
        android:id="@+id/see_lz"
        android:title="@string/see_lz_title"
        android:checkable="true"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="never" />
    <item
        android:id="@+id/jump_page"
        android:title="@string/jump_page_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_forum"
        android:title="@string/open_forum_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy_link"
        android:title="@string/copy_thread_link"
        app:showAsAction="never" />
</menu>