<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_collapseMode="pin" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bar_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="4dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_tips_screen"
        android:visibility="gone"
        app:layout_anchor="@id/bar_list"
        app:layout_anchorGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <TextView
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tips_text"
            android:id="@+id/login_tips" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tips_screen"
        android:visibility="gone"
        app:layout_anchor="@id/bar_list"
        app:layout_anchorGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <TextView
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error_tips" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh_button"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:text="@string/refresh_title"
            app:icon="@drawable/ic_refresh" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>