<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.SearchPostFragment"
    android:clipChildren="false">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false"
        app:liftOnScrollColor="#00000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            android:elevation="5dp"
            android:background="@drawable/rect"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/filter_type_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:singleSelection="true"
                app:checkedButton="@id/filter_all"
                app:selectionRequired="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    style="@style/Widget.RoTieba.SmallOutlinedButton"
                    android:id="@+id/filter_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_all_title" />

                <Button
                    style="@style/Widget.RoTieba.SmallOutlinedButton"
                    android:id="@+id/filter_thread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_thread_title" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Button
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minHeight="0dp"
                android:id="@+id/order_button"
                app:icon="@drawable/ic_sort"
                app:iconGravity="end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/post_list"
        app:fitsSystemWindowsInsets="bottom"
        android:clipToPadding="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?textAppearanceBody1"
        android:id="@+id/result_tips"
        android:visibility="gone"
        app:layout_anchor="@id/post_list"
        app:layout_anchorGravity="center"
        android:text="@string/no_result_tips" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>